--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,20 +4,30 @@
     margin: 0;
 }
 
+/* "a" selector is for the text links of the navs */
+a {
+    color: #ffffff;
+    text-decoration: none;
+}
+p {
+    font-size: 16px;
+}
 body {
     background-color: #d9dcd6;
 }
+
+/* This is for the header that includes the nav links */
 .header {
     padding: 20px;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     background-color: #2a607c;
     color: #ffffff;
 }
-.header h1 {
+h1 {
     display: inline-block;
     font-size: 48px;
 }
-.header h1 .seo {
+.seo {
     color: #d9dcd6;
 }
 .header nav {
@@ -31,13 +41,8 @@ body {
     display: inline-block;
     margin-left: 25px;
 }
-a {
-    color: #ffffff;
-    text-decoration: none;
-}
-p {
-    font-size: 16px;
-}
+
+/* hero class applies to the figure in the body */
 .hero {
     height: 800px;
     width: 100%;
@@ -45,6 +50,11 @@ p {
     background-image: url("../images/digital-marketing-meeting.jpg");
     background-size: cover;
     background-position: center;
+}
+main {
+    width: 75%;
+    display: inline-block;
+    margin-left: 20px;
 }
 main section {
     margin-bottom: 20px;
@@ -54,22 +64,20 @@ main section {
     background-color: #0072bb;
     color: #ffffff;
 }
+
+/* float-left applies to the first and third section in main */
 .float-left {
     float: left;
     margin-right: 25px;
 }
 
+/* float-right applies to the second section in main */
 .float-right {
     float: right;
     margin-left: 25px;
 }
 
-.content {
-    width: 75%;
-    display: inline-block;
-    margin-left: 20px;
-}
-
+/* benefits class applies to the section of three divs after the main */
 .benefits {
     margin-right: 20px;
     padding: 20px;
@@ -80,40 +88,34 @@ main section {
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     background-color: #2589bd;
 }
-
+/* this is the vertical section on the right side of the page below the figure */
 section div {
     margin-bottom: 32px;
     color: #ffffff;
 }
-
 section div h3 {
     margin-bottom: 10px;
     text-align: center;
 }
-
 section div img {
     display: block;
     margin: 10px auto;
     max-width: 150px;
 }
-
 main section img{
     max-height: 200px;
 }
-
 section h2 {
     margin-bottom: 20px;
     font-size: 36px;
 } 
-
-.footer {
+footer {
     padding: 30px;
     clear: both;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     text-align: center;
     color: #000;
 }
-
-.footer h4 {
+footer h4 {
     font-size: 20px;
 }
